backend: add new route to search products by name (#47)
* feat(products): add search route

* refactor(*): rename function to get products by category from db
