# backend/internal/api/v1/routes/products.go
@@ -10,6 +10,7 @@ func ProductsRoutes(api *gin.RouterGroup) {
 	api.GET("/products", handlers.GetProducts)
 	api.GET("/products/:product_id", handlers.GetProductByID)
 	api.GET("/products/categories/:category", handlers.GetProductsByCategory)
+	api.GET("/products/search/:name", handlers.GetProductsByName)
 }
 
 // AdminProductsRoutes adds all routes for the admin products endpoint.
